修正EncryptMessage中，Base64的版本問題。 修正InvoiceMainRepository的名稱及InvoiceMain當中c_member_numer的誤命名已經修好的問題。 加入InvoiceMainRepository的測試程式，確認修改結果正確。
git-svn-id: http://svn.gwis.com.tw:88/repos/M_Charge_Project/trunk@5108 4b8841f4-42b5-4263-839e-868dbe4382dd